Bug 41303 - 0.6 and later does not build on GNU/Hurd
Summary: 0.6 and later does not build on GNU/Hurd
Status: RESOLVED FIXED
Alias: None
Product: p11-glue
Classification: Unclassified
Component: p11-kit (show other bugs)
Version: unspecified
Hardware: Other other
: medium normal
Assignee: Stef Walter
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-28 10:12 UTC by Andreas Metzler
Modified: 2011-09-30 05:28 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Don't use PATH_MAX unless defined (Patch by Pino Toscano) (329 bytes, patch)
2011-09-28 10:12 UTC, Andreas Metzler
Details | Splinter Review

Description Andreas Metzler 2011-09-28 10:12:14 UTC
Created attachment 51731 [details] [review]
Don't use PATH_MAX unless defined (Patch by Pino Toscano)

Hello,

this is http://bugs.debian.org/643601 submitted by Pino Toscano <pino@debian.org>:
--------------------------------------------
Hi,

currently[1], p11-kit 0.7 (0.6 did too) does not compile on GNU/Hurd.
The problem is the unconditional PATH_MAX usage in p11-kit/modules.c;
the fix is limiting the check on the optional PATH_MAX when PATH_MAX
is actually defined.

[1] https://buildd.debian.org/status/fetch.php?pkg=p11-kit&arch=hurd-i386&ver=0.7-1&stamp=1317145772

Thanks,
--
Pino
-----------------------------------------
Comment 1 Stef Walter 2011-09-30 05:28:49 UTC
Thanks. Merged the patch.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.