Don't use PATH_MAX unless its defined

* Fixes build on GNU/Hurd

https://bugs.freedesktop.org/show_bug.cgi?id=41303